--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         <img src="img/gato.gif" alt="Gatito tierno">
         <div class="message">
             <h2>¡Gracias por aceptar! 💕</h2>
-            <p>¡Te quiero mucho! 😍</p>
+            <p>¡Te quiero mucho Luz! 😍</p>
         </div>
     </div>
     <script src="index.js"></script>
